# diffchecker-skill

./: README.md  SKILL.md  diffcheck  pyproject.toml
src/diffchecker_skill/: __init__.py  cli.py
