[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "diffchecker-skill"
dynamic = ["version"]
description = "Create shareable Diffchecker URLs from the command line"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Shivansh Singh", email = "wiseeldrich2004@gmail.com" }
]
keywords = ["diffchecker", "diff", "cli", "share", "skills"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/wise-toddler/diffchecker-skill"
Repository = "https://github.com/wise-toddler/diffchecker-skill"

[project.scripts]
diffcheck = "diffchecker_skill.cli:main"

[tool.hatch.version]
path = "src/diffchecker_skill/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/diffchecker_skill"]
